[tool.poetry]
name = "langchain-template-poe-fastapi"
version = "0.1.0"
description = ""
authors = ["LangChain Inc."]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_template_poe_fastapi"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi-poe = "^0.0.3"
langchain = "^0.0.139"
openai = "^0.27.3"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
